--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>MrEone - Frontend Developer Portfolio</title>
   </head>
   <body>
-    <div class="root" id="root"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
