finished styling all of the project components

--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 minimum-scale=1.0">
+    <meta name="description" content="MrEone - Frontend Developer Portfolio. Explore my projects and skills in web development." />
+    <meta name="keywords" content="MrEone, Ioan Gheraszim, frontend developer, portfolio, web development" />
+    <meta name="author" content="Ioan Gheraszim" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#212428">
+    <link rel="icon" type="image/svg+xml" href="/logo22.svg" />
     <title>MrEone - Frontend Developer Portfolio</title>
   </head>
   <body>
