finished my portfolio

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Ioan Gheraszim" />
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#212428">
-    <link rel="icon" type="image/svg+xml" href="/logo22.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <title>MrEone - Frontend Developer Portfolio</title>
   </head>
   <body>
